--- a/fpga/vivado/cwhusky.runs/impl_no_ilas/cwhusky_top.ltx
+++ b/fpga/vivado/cwhusky.runs/impl_no_ilas/cwhusky_top.ltx
@@ -14,7 +14,7 @@
                     },
                     {
                         "type": "ILA_V3",
-                        "name": "oadc/U_fifo/U_ila_fifo_counts",
+                        "name": "U_usb_reg_main/U_ila_usb",
                         "spec": "labtools_ila_v6",
                         "ipName": "ila",
                         "core_location": {
@@ -22,11 +22,237 @@
                             "slave_index": 0,
                             "bscan_switch_index": 0
                         },
-                        "uuid": "9298C225979E5E51AAA6F2E9A5EC06B1",
+                        "uuid": "7711C27F78A2508BB7793D21BD622F7E",
                         "pins": [
                             {
                                 "name": "probe0",
                                 "id": 0,
+                                "type": "DATA_TRIGGER",
+                                "direction": "IN",
+                                "isVector": true,
+                                "leftIndex": 0,
+                                "rightIndex": 7,
+                                "portIndex": 0,
+                                "nets": [
+                                    {
+                                        "name": "U_usb_reg_main/reg_datai",
+                                        "isBus": true,
+                                        "subnets": [
+                                            {
+                                                "name": "U_usb_reg_main/reg_datai[7]"
+                                            },
+                                            {
+                                                "name": "U_usb_reg_main/reg_datai[6]"
+                                            },
+                                            {
+                                                "name": "U_usb_reg_main/reg_datai[5]"
+                                            },
+                                            {
+                                                "name": "U_usb_reg_main/reg_datai[4]"
+                                            },
+                                            {
+                                                "name": "U_usb_reg_main/reg_datai[3]"
+                                            },
+                                            {
+                                                "name": "U_usb_reg_main/reg_datai[2]"
+                                            },
+                                            {
+                                                "name": "U_usb_reg_main/reg_datai[1]"
+                                            },
+                                            {
+                                                "name": "U_usb_reg_main/reg_datai[0]"
+                                            }
+                                        ]
+                                    }
+                                ]
+                            },
+                            {
+                                "name": "probe1",
+                                "id": 1,
+                                "type": "DATA_TRIGGER",
+                                "direction": "IN",
+                                "isVector": false,
+                                "leftIndex": 0,
+                                "rightIndex": 0,
+                                "portIndex": 1,
+                                "nets": [
+                                    {
+                                        "name": "U_usb_reg_main/cwusb_isout",
+                                        "isBus": false
+                                    }
+                                ]
+                            },
+                            {
+                                "name": "probe2",
+                                "id": 2,
+                                "type": "DATA_TRIGGER",
+                                "direction": "IN",
+                                "isVector": false,
+                                "leftIndex": 0,
+                                "rightIndex": 0,
+                                "portIndex": 2,
+                                "nets": [
+                                    {
+                                        "name": "U_usb_reg_main/cwusb_rdn",
+                                        "isBus": false
+                                    }
+                                ]
+                            },
+                            {
+                                "name": "probe3",
+                                "id": 3,
+                                "type": "DATA_TRIGGER",
+                                "direction": "IN",
+                                "isVector": false,
+                                "leftIndex": 0,
+                                "rightIndex": 0,
+                                "portIndex": 3,
+                                "nets": [
+                                    {
+                                        "name": "U_usb_reg_main/cwusb_wrn",
+                                        "isBus": false
+                                    }
+                                ]
+                            },
+                            {
+                                "name": "probe4",
+                                "id": 4,
+                                "type": "DATA_TRIGGER",
+                                "direction": "IN",
+                                "isVector": false,
+                                "leftIndex": 0,
+                                "rightIndex": 0,
+                                "portIndex": 4,
+                                "nets": [
+                                    {
+                                        "name": "U_usb_reg_main/cwusb_cen",
+                                        "isBus": false
+                                    }
+                                ]
+                            },
+                            {
+                                "name": "probe5",
+                                "id": 5,
+                                "type": "DATA_TRIGGER",
+                                "direction": "IN",
+                                "isVector": false,
+                                "leftIndex": 0,
+                                "rightIndex": 0,
+                                "portIndex": 5,
+                                "nets": [
+                                    {
+                                        "name": "U_usb_reg_main/reg_read",
+                                        "isBus": false
+                                    }
+                                ]
+                            },
+                            {
+                                "name": "probe6",
+                                "id": 6,
+                                "type": "DATA_TRIGGER",
+                                "direction": "IN",
+                                "isVector": false,
+                                "leftIndex": 0,
+                                "rightIndex": 0,
+                                "portIndex": 6,
+                                "nets": [
+                                    {
+                                        "name": "U_usb_reg_main/reg_write",
+                                        "isBus": false
+                                    }
+                                ]
+                            },
+                            {
+                                "name": "probe7",
+                                "id": 7,
+                                "type": "DATA_TRIGGER",
+                                "direction": "IN",
+                                "isVector": false,
+                                "leftIndex": 0,
+                                "rightIndex": 0,
+                                "portIndex": 7,
+                                "nets": [
+                                    {
+                                        "name": "U_usb_reg_main/fast_fifo_read",
+                                        "isBus": false
+                                    }
+                                ]
+                            },
+                            {
+                                "name": "probe8",
+                                "id": 8,
+                                "type": "DATA_TRIGGER",
+                                "direction": "IN",
+                                "isVector": false,
+                                "leftIndex": 0,
+                                "rightIndex": 0,
+                                "portIndex": 8,
+                                "nets": [
+                                    {
+                                        "name": "U_usb_reg_main/drive_data_out",
+                                        "isBus": false
+                                    }
+                                ]
+                            },
+                            {
+                                "name": "probe9",
+                                "id": 9,
+                                "type": "DATA_TRIGGER",
+                                "direction": "IN",
+                                "isVector": true,
+                                "leftIndex": 0,
+                                "rightIndex": 7,
+                                "portIndex": 9,
+                                "nets": [
+                                    {
+                                        "name": "U_usb_reg_main/reg_address",
+                                        "isBus": true,
+                                        "subnets": [
+                                            {
+                                                "name": "U_usb_reg_main/reg_address[7]"
+                                            },
+                                            {
+                                                "name": "U_usb_reg_main/reg_address[6]"
+                                            },
+                                            {
+                                                "name": "U_usb_reg_main/reg_address[5]"
+                                            },
+                                            {
+                                                "name": "U_usb_reg_main/reg_address[4]"
+                                            },
+                                            {
+                                                "name": "U_usb_reg_main/reg_address[3]"
+                                            },
+                                            {
+                                                "name": "U_usb_reg_main/reg_address[2]"
+                                            },
+                                            {
+                                                "name": "U_usb_reg_main/reg_address[1]"
+                                            },
+                                            {
+                                                "name": "U_usb_reg_main/reg_address[0]"
+                                            }
+                                        ]
+                                    }
+                                ]
+                            }
+                        ]
+                    },
+                    {
+                        "type": "ILA_V3",
+                        "name": "oadc/U_fifo/U_ila_fifo_counts",
+                        "spec": "labtools_ila_v6",
+                        "ipName": "ila",
+                        "core_location": {
+                            "user_chain": 1,
+                            "slave_index": 1,
+                            "bscan_switch_index": 0
+                        },
+                        "uuid": "9298C225979E5E51AAA6F2E9A5EC06B1",
+                        "pins": [
+                            {
+                                "name": "probe0",
+                                "id": 10,
                                 "type": "DATA_TRIGGER",
                                 "direction": "IN",
                                 "isVector": false,
@@ -42,7 +268,7 @@
                             },
                             {
                                 "name": "probe1",
-                                "id": 1,
+                                "id": 11,
                                 "type": "DATA_TRIGGER",
                                 "direction": "IN",
                                 "isVector": true,
@@ -117,7 +343,7 @@
                             },
                             {
                                 "name": "probe2",
-                                "id": 2,
+                                "id": 12,
                                 "type": "DATA_TRIGGER",
                                 "direction": "IN",
                                 "isVector": true,
@@ -192,7 +418,7 @@
                             },
                             {
                                 "name": "probe3",
-                                "id": 3,
+                                "id": 13,
                                 "type": "DATA_TRIGGER",
                                 "direction": "IN",
                                 "isVector": false,
@@ -208,7 +434,7 @@
                             },
                             {
                                 "name": "probe4",
-                                "id": 4,
+                                "id": 14,
                                 "type": "DATA_TRIGGER",
                                 "direction": "IN",
                                 "isVector": false,
@@ -224,7 +450,7 @@
                             },
                             {
                                 "name": "probe5",
-                                "id": 5,
+                                "id": 15,
                                 "type": "DATA_TRIGGER",
                                 "direction": "IN",
                                 "isVector": false,
@@ -240,7 +466,7 @@
                             },
                             {
                                 "name": "probe6",
-                                "id": 6,
+                                "id": 16,
                                 "type": "DATA_TRIGGER",
                                 "direction": "IN",
                                 "isVector": false,
@@ -256,7 +482,7 @@
                             },
                             {
                                 "name": "probe7",
-                                "id": 7,
+                                "id": 17,
                                 "type": "DATA_TRIGGER",
                                 "direction": "IN",
                                 "isVector": false,
@@ -272,7 +498,7 @@
                             },
                             {
                                 "name": "probe8",
-                                "id": 8,
+                                "id": 18,
                                 "type": "DATA_TRIGGER",
                                 "direction": "IN",
                                 "isVector": false,
@@ -288,7 +514,7 @@
                             },
                             {
                                 "name": "probe9",
-                                "id": 9,
+                                "id": 19,
                                 "type": "DATA_TRIGGER",
                                 "direction": "IN",
                                 "isVector": false,
